--- a/ThreeP/Components/App.razor
+++ b/ThreeP/Components/App.razor
@@ -1,11 +1,16 @@
 ﻿<!DOCTYPE html>
-<html lang="en">
+<html lang="pl">
 
 <head>
     <meta charset="utf-8"/>
     <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
     <base href="/"/>
     <ResourcePreloader/>
+    
+    @* MUD BLAZOR *@
+    <link href="https://fonts.googleapis.com/css?family=Roboto:300,400,500,700&display=swap" rel="stylesheet"/>
+    <link href="@Assets["_content/MudBlazor/MudBlazor.min.css"]" rel="stylesheet"/>
+    
     <link rel="stylesheet" href="@Assets["app.css"]"/>
     <link rel="stylesheet" href="@Assets["ThreeP.styles.css"]"/>
     <ImportMap/>
@@ -17,6 +22,10 @@
 <ReconnectModal/>
 <script src="@Assets["_framework/blazor.web.js"]"></script>
 <script src="@Assets["Components/Account/Shared/PasskeySubmit.razor.js"]" type="module"></script>
+
+@* MUD BLAZOR *@
+<script src="@Assets["_content/MudBlazor/MudBlazor.min.js"]"></script>
+
 </body>
 
 </html>
