--- a/ThreeP/Components/Routes.razor
+++ b/ThreeP/Components/Routes.razor
@@ -1,11 +1,36 @@
 ﻿@using ThreeP.Components.Account.Shared
-<Router AppAssembly="typeof(Program).Assembly" NotFoundPage="typeof(Pages.NotFound)">
-    <Found Context="routeData">
-        <AuthorizeRouteView RouteData="routeData" DefaultLayout="typeof(Layout.MainLayout)">
-            <NotAuthorized>
-                <RedirectToLogin/>
-            </NotAuthorized>
-        </AuthorizeRouteView>
-        <FocusOnNavigate RouteData="routeData" Selector="h1"/>
-    </Found>
-</Router>
+<ErrorBoundary>
+    <ChildContent>
+        <CascadingAuthenticationState>
+            <AppState>
+
+                <Router AppAssembly="typeof(Program).Assembly" NotFoundPage="typeof(Pages.NotFound)">
+                    <Found Context="routeData">
+                        <AuthorizeRouteView RouteData="routeData" DefaultLayout="typeof(Layout.MainLayout)">
+                            <NotAuthorized>
+                                <RedirectToLogin/>
+                            </NotAuthorized>
+                            <Authorizing>
+                                <MudLoading Progress="Progress.Circular" Color="Color.Primary" Size="Size.Large"/>
+                            </Authorizing>
+                        </AuthorizeRouteView>
+                        <FocusOnNavigate RouteData="routeData" Selector="h1"/>
+                    </Found>
+                </Router>
+
+            </AppState>
+        </CascadingAuthenticationState>
+    </ChildContent>
+    <ErrorContent Context="e">
+        <Error Context="e" OnRecover="@(() =>
+                                      {
+                                          errorBoundary?.Recover();
+                                          StateHasChanged();
+                                      })"/>
+    </ErrorContent>
+
+</ErrorBoundary>
+
+@code {
+    ErrorBoundary? errorBoundary;
+}
