--- a/ThreeP/_Imports.razor
+++ b/ThreeP/_Imports.razor
@@ -29,7 +29,7 @@
 @using MudBlazor.Utilities
 
 
-@* MODULES *@
+@* COMMON MODULES *@
 @using Mac.Modules.Common
 @using Mac.Modules.Elements
 @using Mac.Modules.Logo
@@ -39,3 +39,6 @@
 @using Mac.Modules.Version
 @using Mac.Modules.Pdf
 @using Mac.Modules.Progress
+
+@* MODULES *@
+@using ThreeP.Modules.Items
