Enhance item and set management with validation and improved UI components

--- a/ThreeP/Modules/Common/Elements/PageHeader.razor
+++ b/ThreeP/Modules/Common/Elements/PageHeader.razor
@@ -1,6 +1,6 @@
 ﻿@namespace Mac.Modules.Elements
-<MudElement HtmlTag="div">
-    <MudText Typo="@Typo" Color="@Color" Class="@($"mb-4 {Class}")" Style="@($"{OwnStyle} {Style})")">@Name</MudText>
+<MudElement HtmlTag="div" Class="d-flex align-center">
+    <MudText Typo="@Typo" Color="@Color" Class="@($"{Class}")" Style="@($"{OwnStyle} {Style})")">@Name</MudText>
 </MudElement>
 
 @code {
