--- a/ThreeP/Modules/Items/Components/UpdateItem.razor
+++ b/ThreeP/Modules/Items/Components/UpdateItem.razor
@@ -2,7 +2,7 @@
 
 <div style="text-align: end;">
 </div>
-<Mbox Name="Dodaj/Edytuj " Expanded="expanded">
+<Mbox Name="Dodaj/Edytuj przedmiot" Color="Color.Warning" Expanded="expanded">
     <HeaderRight>
         <MudButton Disabled="addDisabled" Color="Color.Success" Variant="Variant.Filled" Size="Size.Medium" OnClick="Add">Dodaj</MudButton>
     </HeaderRight>
