--- a/ThreeP/Modules/Common/Elements/Mbox.razor
+++ b/ThreeP/Modules/Common/Elements/Mbox.razor
@@ -1,7 +1,7 @@
 ﻿@namespace Mac.Modules.Elements
 <MudPaper Elevation="GlobalStyles.Elevation" Class="my-10 pa-4">
     <MudStack Row Justify="Justify.SpaceBetween">
-        <PageHeader Name="@Name" Color="Color.Primary" Typo="Typo.body1"/>
+        <PageHeader Name="@Name" Color="@Color" Typo="Typo.body1"/>
         <MudSpacer/>
         @if (HeaderRight is not null)
         {
@@ -18,6 +18,7 @@
 
 @code {
     [Parameter] public string? Name { get; set; }
+    [Parameter] public Color Color { get; set; } = Color.Primary;
     [Parameter] public bool Expanded { get; set; }
     [Parameter] public RenderFragment? HeaderRight { get; set; }
     [Parameter] public RenderFragment? ChildContent { get; set; }
