--- a/ThreeP/Modules/Common/Elements/Mbox.razor
+++ b/ThreeP/Modules/Common/Elements/Mbox.razor
@@ -1,7 +1,7 @@
 ﻿@namespace Mac.Modules.Elements
 <MudPaper Elevation="GlobalStyles.Elevation" Class="my-10 pa-4">
     <MudStack Row Justify="Justify.SpaceBetween">
-        <PageHeader Name="@Name" Color="@Color" Typo="Typo.body1"/>
+        <title Name="@Name" Color="@Color" Typo="Typo.body1"/>
         <MudSpacer/>
         @if (HeaderRight is not null)
         {
