--- a/ThreeP/Modules/Items/Components/ItemUpdate.razor
+++ b/ThreeP/Modules/Items/Components/ItemUpdate.razor
@@ -41,6 +41,7 @@
         {
             exist = Item;
             expanded = true;
+            addDisabled = true;
         }
         else
         {
