--- a/ThreeP/Modules/Settings/Pages/SettingsPage.razor
+++ b/ThreeP/Modules/Settings/Pages/SettingsPage.razor
@@ -6,7 +6,7 @@
 @implements IDisposable
 
 
-<PageHeader Name="Ustawienia" Class="my-5"/>
+<title Name="Ustawienia" Class="my-5"/>
 
 
 @if (AppState.Settings is null)
