--- a/ThreeP/Modules/Common/Elements/MTitle.razor
+++ b/ThreeP/Modules/Common/Elements/MTitle.razor
@@ -5,9 +5,9 @@
 
 @code {
     [Parameter] public string? Name { get; set; }
-    [Parameter] public Typo Typo { get; set; } = Typo.h5;
+    [Parameter] public Typo Typo { get; set; } = GlobalStyles.HeaderTypo;
     [Parameter] public bool Uppercase { get; set; }
-    [Parameter] public Color Color { get; set; } = Color.Default;
+    [Parameter] public Color Color { get; set; } = GlobalStyles.TextColor;
     [Parameter] public string? Class { get; set; }
     [Parameter] public string? Style { get; set; }
     string OwnStyle => $" {(Uppercase ? "text-transform: uppercase;" : "")}";
