--- a/ThreeP/Modules/Items/Pages/ItemsPage.razor
+++ b/ThreeP/Modules/Items/Pages/ItemsPage.razor
@@ -1,10 +1,10 @@
 ﻿@namespace ThreeP.Modules.Items
-@page "/ekwipunek"
+@page "/equipment"
 @inject ItemsService ItemsService
 @inject SetService SetService
 @inject ShowResultService ShowResultService
 
-<UpdateItem Item="item" ItemChanged="UpdateItem"/>
+<ItemUpdate Item="item" ItemChanged="UpdateItem"/>
 <MudStack Row StretchItems="StretchItems.All">
     <ItemsGrid Items="Items" OnEdit="EditItem" OnDelete="DeleteItem" OnSetCreating="UpdateSet"/>
     <SetsGrid Sets="Sets" OnEdit="EditSet" OnDelete="DeleteSet"/>
@@ -24,7 +24,7 @@
 
 
 // ITEMS
-    async Task GetItems() => Items = await ItemsService.Get();
+    async Task GetItems() => Items = (await ItemsService.Get()).ToHashSet();
 
 
     async Task EditItem(Item arg)
@@ -51,7 +51,7 @@
 
 
     // SETS
-    async Task GetSets() => Sets = await SetService.Get([x => x.Items]);
+    async Task GetSets() => Sets = (await SetService.Get([x => x.Items])).ToHashSet();
 
 
     async Task UpdateSet(Set? arg)
