--- a/ThreeP/Modules/Items/Components/ItemsGrid.razor
+++ b/ThreeP/Modules/Items/Components/ItemsGrid.razor
@@ -10,13 +10,14 @@ else
     <MudDataGrid Items="Items" Elevation="GlobalStyles.Elevation" MultiSelection @bind-SelectedItems="selectedItems">
         <ToolBarContent>
             @* <MudText Color="Color.Warning">Przedmioty</MudText> *@
-            <MTitle Name="Wyposażenie" />
+            <MTitle Name="Wyposażenie"/>
             <MudSpacer/>
             <MudForm @ref="@setForm">
                 <MudStack Row>
                     <MudTextField Disabled="addSetDisabled.Value" @bind-Value="setName" Variant="Variant.Text"
                                   Placeholder="Nazwa Setu" Class="me-2" Required Immediate/>
-                    <MudButton Disabled="@(addSetDisabled.Value||!setForm.IsValid)" Variant="Variant.Filled" Color="Color.Info"
+                    <MudButton Disabled="@(addSetDisabled.Value || !setForm.IsValid)" Variant="Variant.Filled"
+                               Color="Color.Info"
                                Size="Size.Small"
                                OnClick="AddSet">Dodaj Set
                     </MudButton>
@@ -30,11 +31,13 @@ else
             <PropertyColumn Property="x => x.Description" Title="Opis"/>
             <PropertyColumn Property="x => x.Weight" Title="Waga"/>
 
-            <TemplateColumn StickyRight Title="Akcje" CellClass="d-flex justify-center" CellStyle="width:120px;"
-                            HeaderStyle="width:120px; ">
+            @* ACTIONS *@
+            <TemplateColumn StickyRight Title="Akcje" 
+                            HeaderClass="d-flex justify-center" HeaderStyle="width:120px; "
+                            CellStyle="width:120px; text-align:center; ">
                 <CellTemplate>
                     <MudIconButton Icon="@Icons.Material.Filled.Edit" Color="Color.Info" Size="Size.Small"
-                                   OnClick="@(e => Edit(context))"/>
+                                   OnClick="@(e => Edit(context))" Class="me-3"/>
                     <MudIconButton Icon="@Icons.Material.Filled.Delete" Color="Color.Error" Size="Size.Small"
                                    OnClick="@(e => Delete(context))"/>
                 </CellTemplate>
@@ -49,10 +52,10 @@ else
     [Parameter] public EventCallback<Item> OnEdit { get; set; }
     [Parameter] public EventCallback<Guid?> OnDelete { get; set; }
     [Parameter] public EventCallback<Set> OnSetCreating { get; set; }
-    [Parameter] public HashSet<Item>? Items { get; set; }
+    [Parameter] public List<Item>? Items { get; set; }
 
     HashSet<Item>? selectedItems = [];
-    bool? addSetDisabled => selectedItems?.Any() != true ;
+    bool? addSetDisabled => selectedItems?.Any() != true;
 
     MudForm? setForm;
     string? setName;
