--- a/ThreeP/_Imports.razor
+++ b/ThreeP/_Imports.razor
@@ -39,6 +39,7 @@
 @using Mac.Modules.Version
 @using Mac.Modules.Pdf
 @using Mac.Modules.Progress
+@using Mac.Modules.BackArrow
 
 @* MODULES *@
 @using ThreeP.Modules.Items
